[workspace.package]
authors = ["Davide Galassi <davxy@datawok.net>"]
edition = "2021"
repository = "https://github.com/davxy/polkadot-arkworks-extensions"
license = "MIT"
version = "0.1.0"

[workspace]
resolver = "2"
members = [
  # "node",
  # "pallets/arkworks-ext",
  # "runtime",
  "pallets/template"
]

[workspace.dependencies]
codec = { package = "parity-scale-codec", version = "3.7.5", default-features = false }
scale-info = { version = "2.11.6", default-features = false }
polkadot-sdk = { git = "https://github.com/davxy/polkadot-sdk", default-features = false }
sp-crypto-ec-utils = { git = "https://github.com/davxy/polkadot-sdk", default-features = false, features = ["all-curves"] }
