[workspace.package]
authors = ["Davide Galassi <davxy@datawok.net>"]
edition = "2021"
license = "MIT"
version = "0.1.0"
repository = "https://github.com/davxy/polkadot-arkworks-demo"
homepage = "https://github.com/davxy/polkadot-arkworks-demo"

[workspace]
resolver = "2"
members = [
  "node",
  "runtime",
  "pallets/vrf",
  "pallets/hostcalls",
]

[workspace.dependencies]
codec = { package = "parity-scale-codec", version = "3.7.5", default-features = false }
scale-info = { version = "2.11.6", default-features = false }
serde_json = { version = "1.0.132", default-features = false }

clap = { version = "4.5", default-features = false }
futures = { version = "0.3.31", default-features = false }
jsonrpsee = { version = "0.24.10", default-features = false }
log = { version = "0.4", default-features = false }

# Polkadot SDK dependencies
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
frame-benchmarking-cli = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
frame-executive = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
frame-system-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }

pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }

sc-basic-authorship = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sc-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sc-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sc-offchain = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }

sp-api = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-crypto-ec-utils = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, features = ["all-curves"] }
sp-genesis-builder = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-session = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-storage = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-version = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-tracing = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }

substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
