[package]
name = "pallet-ark-hostcalls"
description = "A pallet showing usage of Arkworks primitives backed by Substrate host functions"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, features = ["derive"] }
scale-info = { features = ["derive"], workspace = true }

# frame deps
frame-benchmarking = { optional = true, workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }

# sp deps
sp-crypto-ec-utils = { workspace = true }

# Arkworks deps
ark-ec = { version = "0.5.0", default-features = false }
ark-ff = { version = "0.5.0", default-features = false, features = ["asm"] }
ark-std = { version = "0.5.0", default-features = false }
ark-scale = { version = "0.0.13", default-features = false, features = ["hazmat"] }
ark-bls12-381 = { version = "0.5.0", default-features = false }
ark-ed-on-bls12-377 = { version = "0.5.0", default-features = false }
ark-ed-on-bls12-381-bandersnatch = { version = "0.5.0", default-features = false }

[dev-dependencies]
sp-io = { workspace = true }
sp-tracing = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-crypto-ec-utils/std",
	"sp-io/std",
	# Arkworks deps
	"ark-ec/std",
	"ark-ff/std",
	"ark-std/std",
	"ark-std/parallel",
	"ark-scale/std",
	"ark-bls12-381/std",
	"ark-ed-on-bls12-377/std",
	"ark-ed-on-bls12-381-bandersnatch/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
