[package]
name = "pallet-ark-vrf"
description = "A pallet showing usage of Arkworks-VRF crate with polkadot hostcalls support"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }

# frame deps
frame-benchmarking = { optional = true, workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
log = { workspace = true }

# sp deps
sp-crypto-ec-utils = { workspace = true }

# VRF crypto
ark-vrf = { version = "0.1.1", default-features = false, features = ["bandersnatch", "ring", "asm"] }

[dev-dependencies]
sp-core = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }
sp-tracing = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"scale-info/std",
	"ark-vrf/parallel"
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"ark-vrf/test-vectors",
]
small-ring = []
